--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,8 @@
 <div class="wraper shadow">
   <div class="container">
     <div class="logo">
-      <img src="https://st3.depositphotos.com/4024659/16654/i/450/depositphotos_166547760-stock-photo-gold-elegant-letter-a-graceful.jpg" alt="">
+      # <img src="https://st3.depositphotos.com/4024659/16654/i/450/depositphotos_166547760-stock-photo-gold-elegant-letter-a-graceful.jpg" alt="">
+      
       <h1>Sign up</h1>
     </div>
   </div>
